<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foreground="@drawable/bg_roundrect_ripple_black_border"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_rightArrow"
        app:layout_constraintStart_toEndOf="@+id/iv_leftArrow"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_capacityAndStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato_regular"
            android:text=""
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_distanceToSpacecraft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/lato_regular"
            android:text=""
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/iv_fav"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:layout_marginTop= "10dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_star_border_black"
            android:contentDescription="@string/icon_fav" />

        <TextView
            android:id="@+id/tv_stationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_regular"
            android:text=""
            android:textColor="#000000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_travel"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:background="#FFF"
            android:foreground="@drawable/bg_square_ripple_black_border"
            android:text="@string/travel"
            android:textAllCaps="false" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_rightArrow"
        android:layout_width="51dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_chevron_right_black"
        android:tint="#000000"
        android:contentDescription="@string/rightclick"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_leftArrow"
        android:layout_width="51dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/leftclick"
        android:src="@drawable/ic_chevron_left_black"
        android:tint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>