<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.CreatingSpacecraftFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/black_underline"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pointText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_continue"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="15sp"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_capacity"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#000000"
            app:strokeWidth="2dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/lato_regular"
            android:singleLine="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:background="@drawable/rounded_edittext"
            android:text="@string/point"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/tv_pointText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pointText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/lato_regular"
            android:singleLine="true"
            android:text="@string/points_to_be_distributed"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_stationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/lato_medium"
            android:hint="@string/spacecraft_name"
            android:inputType="textEmailAddress"
            android:autofillHints=""
            android:padding="10dp"
            android:textColor="#8D97AA"
            android:textColorHint="#8D97AA"
            android:textColorLink="#8D97AA"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/black_underline"
            app:layout_constraintStart_toStartOf="@+id/black_underline"
            app:layout_constraintTop_toBottomOf="@+id/black_underline" />

        <TextView
            android:id="@+id/tv_durability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/durability"
            android:textColor="#8D97AA"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/edt_stationName"
            app:layout_constraintTop_toBottomOf="@+id/edt_stationName" />

        <SeekBar
            android:id="@+id/sb_durability"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:max="15"
            android:progress="0"
            android:progressBackgroundTint="#000000"
            android:progressTint="#000000"
            android:thumbTint="#000000"
            app:layout_constraintEnd_toEndOf="@+id/edt_stationName"
            app:layout_constraintStart_toStartOf="@+id/tv_durability"
            app:layout_constraintTop_toBottomOf="@+id/tv_durability" />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/speed"
            android:textColor="#8D97AA"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/edt_stationName"
            app:layout_constraintTop_toBottomOf="@+id/sb_durability" />

        <SeekBar
            android:id="@+id/sb_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:max="15"
            android:progress="0"
            android:progressBackgroundTint="#000000"
            android:progressTint="#000000"
            android:thumbTint="#000000"
            app:layout_constraintEnd_toEndOf="@+id/edt_stationName"
            app:layout_constraintStart_toStartOf="@+id/tv_durability"
            app:layout_constraintTop_toBottomOf="@+id/tv_speed" />

        <TextView
            android:id="@+id/tv_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/capacity"
            android:textColor="#8D97AA"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/edt_stationName"
            app:layout_constraintTop_toBottomOf="@+id/sb_speed" />

        <SeekBar
            android:id="@+id/sb_capacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:max="15"
            android:progress="0"
            android:progressBackgroundTint="#000000"
            android:progressTint="#000000"
            android:thumbTint="#000000"
            app:layout_constraintEnd_toEndOf="@+id/edt_stationName"
            app:layout_constraintStart_toStartOf="@+id/tv_durability"
            app:layout_constraintTop_toBottomOf="@+id/tv_capacity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

